--- a/Facebook Group Analyzer-comments, shares, likes.ipynb
+++ b/Facebook Group Analyzer-comments, shares, likes.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "You will need a Facebook account to register for a Facebook application ID and application secret. Register here: https://developers.facebook.com/apps\n",
     "\n",
-    "This Jupyter Notebook will download the Facebook posts on a group or fan page, along with the numbers of comments, likes, and shares for each post. Bar charts are created providing overall and monthly social media metrics for conversation rates, amplification rates, and applause rates.\n",
+    "This Jupyuter Notebook will download the Facebook posts on a group or fan page, along with the numbers of comments, likes, and shares for each post. Bar charts are created providing overall and monthly social media metrics for conversation rates, amplification rates, and applause rates.\n",
     "\n",
     "\n",
     "**An extra-special thank you** to Max Woolf for his fantastic tutorial *How to Scrape Data From Facebook Page Posts for Statistical Analysis* (http://minimaxir.com/2015/07/facebook-scraper/). Significant functions from the tutorial are included here with only small adjustments."
@@ -36,9 +36,9 @@
     "####################\n",
     "# Fill in information below\n",
     "#\n",
-    "app_id = ''\n",
-    "app_secret = ''\n",
-    "page_id = ''\n",
+    "app_id = '1970500526539261'\n",
+    "app_secret = '519e9ad04c948bce48698d2cbd20ab37'\n",
+    "page_id = '149575771779479'\n",
     "#\n",
     "####################\n",
     "\n",
@@ -285,12 +285,12 @@
    "source": [
     "%matplotlib inline\n",
     "\n",
-    "bar_conversations_sum = pygal.Bar(style=LightSolarizedStyle, width=800, height=600, show_legend=False, human_readable=True, title='Conversations Total per Month\\n(total comments)\\nOverall: '+q1)\n",
-    "bar_conversations_ratio = pygal.Bar(style=LightSolarizedStyle, width=800, height=600, show_legend=False, human_readable=True, title='Conversations Ratio per Month\\n(comments per post)\\nOverall: '+q2)\n",
-    "\n",
     "col='Conversations'\n",
     "frequency_sum, frequency_ratio, names, q1, q2 = conf_ratio(rate_conversion,col)\n",
     "dict_freq[col]=frequency_ratio\n",
+    "\n",
+    "bar_conversations_sum = pygal.Bar(style=LightSolarizedStyle, width=800, height=600, show_legend=False, human_readable=True, title='Conversations Total per Month\\n(total comments)\\nOverall: '+q1)\n",
+    "bar_conversations_ratio = pygal.Bar(style=LightSolarizedStyle, width=800, height=600, show_legend=False, human_readable=True, title='Conversations Ratio per Month\\n(comments per post)\\nOverall: '+q2)\n",
     "\n",
     "for i in range(0,len(frequency_sum)-1):\n",
     "    bar_conversations_sum.add(names[i], frequency_sum[i])\n",
