Update Facebook Group Analyzer-comments, shares, likes.ipynb

--- a/Facebook Group Analyzer-comments, shares, likes.ipynb
+++ b/Facebook Group Analyzer-comments, shares, likes.ipynb
@@ -36,9 +36,9 @@
     "####################\n",
     "# Fill in information below\n",
     "#\n",
-    "app_id = '1970500526539261'\n",
-    "app_secret = '519e9ad04c948bce48698d2cbd20ab37'\n",
-    "page_id = '149575771779479'\n",
+    "app_id = ''\n",
+    "app_secret = ''\n",
+    "page_id = ''\n",
     "#\n",
     "####################\n",
     "\n",
